# crawler-api

./: .gitignore  Dockerfile  Dockerfile.emulators  Makefile  pyproject.toml
.github/: workflow.yml
.github/workflows/: main.yml
app/: main.py  services.py
app/api/: deps.py
app/api/routers/: crawl.py  health_check.py  internal.py
app/resources/: model.py  queues.py  repositories.py
app/resources/events/: base_event.py  created_process_event.py  event_factory.py  links_extracted_event.py
app/resources/queues/: base_queue.py  google_pubsub_queue.py
app/resources/repositories/: base_repository.py  firestore_repository.py
app/services/: crawling_service.py  html_service.py  screenshot_service.py
src/: main.py
terraform/: main.tf  terraform.tfstate  variables.tf
tests/: test_crawl.py  test_services.py
