[tool.poetry]
name = "crawler-api"
version = "0.1.0"
description = ""
authors = ["Henrique Boneto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.5"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
